<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="204dp"
        android:layout_height="204dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/logo_intern" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEmail"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:text="@string/emailDeProba"
        android:inputType="textEmailAddress"
        android:textColorHint="#888888"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvPasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:text="@string/parolaDeProba"
        android:inputType="textPassword"
        android:textColorHint="#888888"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btnLogin"
        android:textColor="#FFFFFF"
        android:backgroundTint="#ffafcc"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDontHaveAnAccount"
        android:textColor="#ffafcc"
        android:textSize="14sp"
        android:background="@android:color/transparent"/>

</LinearLayout>
